--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="wrapper">
+		<h1>Dog Adoption Application</h1>
+		<div>
+			<label for="name">Full Name:</label>
+			<input type="text" id="name" placeholder="Name">
+		</div>
+
+		<div>
+			<label for="phone">Phone Number:</label>
+			<input type="text" id="phone" placeholder="Phone Number">
+		</div>
+
+		<div>
+			<label for="address">Address:</label>
+			<input type="text" id="address" placeholder="Address">
+		</div>
+
+		<div>
+			<label for="checkbox">Have you ever lived with a Dog before?</label>
+			<input type="checkbox" name="checkbox" id="checkbox">
+				Have you ever lived with a Dog before?
+		</div>
+
+		<div>
+			<label for="multiSelect">Please select your preferred breeds</label>
+			<select name="multiSelect" id="multiSelect">
+				<option value="Akita">Akita</option>
+				<option value="Alaskan Klee Kai">Alaskan Klee Kai</option>
+				<option value="Appenzeller Sennenhund">Appenzeller Sennenhund</option>
+			</select>
+		</div>
+
+		<div>
+			<button id="submit" type="submit">Submit</button>
+		</div>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
