--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="wrapper">
+		<form>
 		<h1>Dog Adoption Application</h1>
 		<div>
 			<label for="name">Full Name:</label>
@@ -27,7 +28,7 @@
 
 		<div>
 			<label for="checkbox">Have you ever lived with a Dog before?</label>
-			<input type="checkbox" name="checkbox" id="checkbox">
+			<input value type="checkbox" name="checkbox" id="checkbox">
 				
 		</div>
 
@@ -41,8 +42,9 @@
 		</div>
 
 		<div>
-			<button id="submit" type="submit">Submit</button>
+			<button id="submit" value="submit" type="submit">Submit</button>
 		</div>
+			</form>
 
 	</div>
     <script type="text/javascript" src="./script.js">
