--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<!-- the entire body must be written by student -->
 	<div class="wrapper">
 		<form>
 		<h1>Dog Adoption Application</h1>
