--- a/main.html
+++ b/main.html
@@ -8,7 +8,6 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<!-- the entire body must be written by student -->
 	<div class="wrapper">
 		<form>
 		<h1>Dog Adoption Application</h1>
@@ -43,7 +42,7 @@
 		</div>
 
 		<div>
-			<button id="submit" value="submit" type="submit">Submit</button>
+			<input id="submit" value="submit" type="submit">
 		</div>
 			</form>
 
