--- a/main.html
+++ b/main.html
@@ -28,9 +28,9 @@
 
 		<div>
 			<label for="checkbox">Have you ever lived with a Dog before?</label>
-			<input value type="checkbox" name="checkbox" id="checkbox">
-				
+			<input type="checkbox" value="Have you ever lived with a Dog before?" name="checkbox" id="checkbox">
 		</div>
+
 
 		<div>
 			<label for="multiSelect">Please select your preferred breeds</label>
@@ -42,7 +42,7 @@
 		</div>
 
 		<div>
-			<input id="submit" value="submit" type="submit">
+			<input id="submit" value="Submit" type="submit">
 		</div>
 			</form>
 
